force-app/main/default/objects/Logistics_CP_Review_YesorNo__c/Logistics_CP_Review_YesorNo__c.object-meta.xml
<CustomObject>
    <label>Logistics_CP_Review_YesorNo</label>
    <nameField>
        <label>Logistics_CP_Review_YesorNo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logistics_CP_Review_YesorNos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>