force-app/main/default/objects/Logistics_CP_Review_YesorNo__c/fields/Cargoes__c.field-meta.xml
<CustomField>
    <fullName>Cargoes__c</fullName>
    <label>Cargoes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>