force-app/main/default/objects/Logistics_CP_Review_YesorNo__c/fields/IsConfirm__c.field-meta.xml
<CustomField>
    <fullName>IsConfirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConfirm</label>
    <type>Checkbox</type>
</CustomField>