force-app/main/default/objects/Logistics_CP_Review_YesorNo__c/fields/Level1__c.field-meta.xml
<CustomField>
    <fullName>Level1__c</fullName>
    <label>Level1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Need to review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>