force-app/main/default/objects/Logistics_CP_Review_YesorNo__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Logistics_CP_Review_YesorNos</relationshipLabel>
    <relationshipName>Logistics_CP_Review_YesorNos</relationshipName>
    <type>Lookup</type>
</CustomField>