force-app/main/default/objects/Logistics_CP_Review_YesorNo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Choudhary Kajal</value>
    </filters>
    <label>All</label>
</ListView>